Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<p>Convert the temperature from Farenheit to Celsius</p>
+<h3>Convert the temperature from Farenheit to Celsius</h3>
 <input type="text" id="gogo" placeholder="enter the temperature in F">
 <input type="button" onclick="Celsius();" value="check">
 </form>
